--- a/governance/index.html
+++ b/governance/index.html
@@ -3024,11 +3024,17 @@
                             <ul class="dropdown-menu dropdown-menu-dark">      
                                 <li>
                                     <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                        <img src="coredao.png" alt="" width="5%">Core Explorer
-                                    </a>
-                                    <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                        <img src="coredao.png" alt="" width="5%">Discord
-                                    </a>
+                                        Core Explorer
+                                     </a>
+                                     <a class="dropdown-item " href="https://discord.gg/67UzyXVKda" target="_blank">
+                                        Discord
+                                     </a>
+                                     <a class="dropdown-item " href="https://twitter.com/unitycorepro" target="_blank">
+                                        Twitter
+                                     </a>
+                                     <a class="dropdown-item " href="http://unitycore-protocol.gitbook.io" target="_blank">
+                                        Whitepaper
+                                     </a>
                                 </li>
                             </ul>
                         </li>
@@ -3054,12 +3060,7 @@
                             </div>
                             <p class="MuiTypography-root MuiTypography-description css-mg5q4r">Unity Protocol is a fully
                                 decentralized, community governed protocol by the UNITY token-holders. UNITY token-holders
-                                collectively discuss, propose, and vote on upgrades to the protocol. AAVE token-holders
-                                (Core network only) can either vote themselves on new proposals or delagate to an
-                                address of choice. To learn more check out the Governance<!-- --> <a
-                                    class="MuiTypography-root MuiTypography-description MuiLink-root MuiLink-underlineNone css-5aht5b"
-                                    href="https://docs.aave.com/faq/governance" target="_blank"
-                                    rel="noopener">documentation</a>.</p>
+                                collectively discuss, propose, and vote on upgrades to the protocol.</p>
                         </div>
                         <div class="MuiBox-root css-k7vncv">
                             <div class="MuiBox-root css-gc7fdh">
@@ -3099,34 +3100,6 @@
                             <div
                                 class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1kgyjsj">
                                 <div class="MuiBox-root css-fpa5gc">
-                                    <div class="MuiBox-root css-12d2mry">
-                                        <div class="MuiTypography-root MuiTypography-h3 css-upncnh">Proposals</div>
-                                        <div class="MuiBox-root css-1u3puas">
-                                            <div class="MuiBox-root css-1v6lj4c">
-                                                <div class="MuiBox-root css-18844cj">
-                                                    <div class="MuiBox-root css-14aub4a"><svg
-                                                            xmlns="http://www.w3.org/2000/svg" fill="none"
-                                                            viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
-                                                            aria-hidden="true" height="16">
-                                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                                                        </svg></div>
-                                                    <div
-                                                        class="MuiInputBase-root MuiInputBase-colorPrimary css-1a7hfet">
-                                                        <input type="text" placeholder="Search proposals" value=""
-                                                            class="MuiInputBase-input css-y6kuqv" /></div><button
-                                                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-sepths"
-                                                        tabindex="0" type="button"><svg
-                                                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                                                            fill="currentColor" aria-hidden="true" height="16">
-                                                            <path fill-rule="evenodd"
-                                                                d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z"
-                                                                clip-rule="evenodd"></path>
-                                                        </svg></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                     <div class="MuiBox-root css-j0ozid">
                                         <p class="MuiTypography-root MuiTypography-description css-1nkijli">Filter</p>
                                         <div
