--- a/index.html
+++ b/index.html
@@ -1944,10 +1944,16 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">      
                                     <li>
                                         <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                            <img src="coredao.png" alt="" width="5%">Core Explorer
+                                           Core Explorer
                                         </a>
-                                        <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                            <img src="coredao.png" alt="" width="5%">Discord
+                                        <a class="dropdown-item " href="https://discord.gg/67UzyXVKda" target="_blank">
+                                           Discord
+                                        </a>
+                                        <a class="dropdown-item " href="https://twitter.com/unitycorepro" target="_blank">
+                                           Twitter
+                                        </a>
+                                        <a class="dropdown-item " href="http://unitycore-protocol.gitbook.io" target="_blank">
+                                           Whitepaper
                                         </a>
                                     </li>
                                 </ul>
@@ -1957,7 +1963,7 @@
                 </div>
             </div>
         </nav>
-       
+      
         <main class="MuiBox-root css-b95f0i">
             <div class="MuiBox-root css-614h4q">
                 <div class="MuiContainer-root MuiContainer-maxWidthLg css-ycl373">
