--- a/markets/index.html
+++ b/markets/index.html
@@ -2264,11 +2264,17 @@
                             <ul class="dropdown-menu dropdown-menu-dark">      
                                 <li>
                                     <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                        <img src="coredao.png" alt="" width="5%">Core Explorer
-                                    </a>
-                                    <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                        <img src="coredao.png" alt="" width="5%">Discord
-                                    </a>
+                                        Core Explorer
+                                     </a>
+                                     <a class="dropdown-item " href="https://discord.gg/67UzyXVKda" target="_blank">
+                                        Discord
+                                     </a>
+                                     <a class="dropdown-item " href="https://twitter.com/unitycorepro" target="_blank">
+                                        Twitter
+                                     </a>
+                                     <a class="dropdown-item " href="http://unitycore-protocol.gitbook.io" target="_blank">
+                                        Whitepaper
+                                     </a>
                                 </li>
                             </ul>
                         </li>
@@ -2295,7 +2301,7 @@
                                                         height="100%" /></div>
                                                 <div class="MuiBox-root css-vc54u4">
                                                     <h1 class="MuiTypography-root MuiTypography-h1 css-1jz7z4v">
-                                                        Core<!-- --> </h1>
+                                                        Markets<!-- --> </h1>
                                                 </div>
                                             </div>
                                         </div>
