--- a/staking/index.html
+++ b/staking/index.html
@@ -1691,11 +1691,17 @@
                             <ul class="dropdown-menu dropdown-menu-dark">      
                                 <li>
                                     <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                        <img src="coredao.png" alt="" width="5%">Core Explorer
-                                    </a>
-                                    <a class="dropdown-item " href="https://scan.coredao.org/" target="_blank">
-                                        <img src="coredao.png" alt="" width="5%">Discord
-                                    </a>
+                                        Core Explorer
+                                     </a>
+                                     <a class="dropdown-item " href="https://discord.gg/67UzyXVKda" target="_blank">
+                                        Discord
+                                     </a>
+                                     <a class="dropdown-item " href="https://twitter.com/unitycorepro" target="_blank">
+                                        Twitter
+                                     </a>
+                                     <a class="dropdown-item " href="http://unitycore-protocol.gitbook.io" target="_blank">
+                                        Whitepaper
+                                     </a>
                                 </li>
                             </ul>
                         </li>
@@ -1719,7 +1725,7 @@
                                     alt="" />
                                 <h1 class="MuiTypography-root MuiTypography-h1 css-1537p62">Staking</h1>
                             </div>
-                            <p class="MuiTypography-root MuiTypography-description css-mg5q4r">Core holders (Core Chain only) can stake their Unity Protocol Token in the Safety Module to add more security to the protocol and earn Safety Incentives. In the case of a shortfall event, up to 30% of your stake can be slashed to cover the deficit, providing an additional layer of protection for the protocol.<a
+                            <p class="MuiTypography-root MuiTypography-description css-mg5q4r">Core holders (Core Chain only) can stake their Unity Protocol Token in the Safety Module to add more security to the protocol and earn Safety Incentives.<a
                                     class="MuiTypography-root MuiTypography-description MuiLink-root MuiLink-underlineNone css-5aht5b"
                                     href="https://unitycore-protocol.gitbook.io/unitycoreprotocol-docs./" target="_blank"
                                     rel="noopener">Learn more about risks involved</a></p>
