--- a/governance/index.html
+++ b/governance/index.html
@@ -3056,7 +3056,7 @@
                             </div>
                             <div class="MuiBox-root css-1coeexk"><img src="../coredao.png" width="32px" height="32px"
                                     alt="" />
-                                <h1 class="MuiTypography-root MuiTypography-h1 css-1537p62">UnityCore Governance</h1>
+                                <h1 class="MuiTypography-root MuiTypography-h1 css-1537p62">Governance</h1>
                             </div>
                             <p class="MuiTypography-root MuiTypography-description css-mg5q4r">Unity Protocol is a fully
                                 decentralized, community governed protocol by the UNITY token-holders. UNITY token-holders
@@ -3086,43 +3086,14 @@
             </div>
             <div class="MuiBox-root css-159pi92">
                 <div class="MuiContainer-root MuiContainer-maxWidthLg css-1a8qn2o">
-                    <div role="group" class="MuiToggleButtonGroup-root css-kvup9v"><button
-                            class="MuiButtonBase-root Mui-disabled MuiToggleButton-root Mui-selected Mui-disabled MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-12mopxp"
-                            tabindex="-1" type="button" disabled="" value="0" aria-pressed="true">
-                            <p class="MuiTypography-root MuiTypography-subheader1 css-fu4g2f">Proposals</p>
-                        </button><button
-                            class="MuiButtonBase-root MuiToggleButton-root MuiToggleButton-sizeMedium MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal css-12mopxp"
-                            tabindex="0" type="button" value="1" aria-pressed="false">
-                            <p class="MuiTypography-root MuiTypography-subheader1 css-fu4g2f">Your info</p>
-                        </button></div>
+                    
                     <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-isbt42">
                         <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-8 css-3nwm7d">
                             <div
                                 class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1kgyjsj">
                                 <div class="MuiBox-root css-fpa5gc">
-                                    <div class="MuiBox-root css-j0ozid">
-                                        <p class="MuiTypography-root MuiTypography-description css-1nkijli">Filter</p>
-                                        <div
-                                            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary  css-flyv8v">
-                                            <div tabindex="0" role="button" aria-expanded="false"
-                                                aria-haspopup="listbox" aria-labelledby="filter" id="filter"
-                                                class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-nq2fwf">
-                                                All proposals</div><input value="all" aria-hidden="true" tabindex="-1"
-                                                class="MuiSelect-nativeInput css-1k3x8v3" /><svg
-                                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hcwyq9"
-                                                focusable="false" aria-hidden="true" viewBox="0 0 24 24"><svg
-                                                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                                    stroke-width="2" stroke="currentColor" aria-hidden="true">
-                                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                                        d="M19 9l-7 7-7-7"></path>
-                                                </svg></svg>
-                                            <fieldset aria-hidden="true"
-                                                class="MuiOutlinedInput-notchedOutline css-igs3ac">
-                                                <legend class="css-ihdtdm"><span class="notranslate">​</span></legend>
-                                            </fieldset>
-                                        </div>
-                                    </div>
-                                </div><span
+                                    
+                             </div><span
                                     class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-36zox"
                                     role="progressbar"><span
                                         class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-qcpy5q"></span><span
