assets header section

--- a/markets/index.html
+++ b/markets/index.html
@@ -2411,27 +2411,18 @@
                                 </div>
                             </div>
                         </div>
-                     <!--   <a href="#" class="list-group-item list-group-item-action">
-                                <div class="marketsgroupheader">
-                                    <div>
-                                        <h6>ASSETS</h6><br>
+                        <div class="list-group" style="margin-left: 2vw; margin-bottom: 5vh;">
+                                <div class="marketsgroup">
+                                    <h6 class="card-title">ASSETS</h6>
+                                    <div style="display: block;">
+                                        <h6 class="card-title">MARKET</h6><br>
                                     </div>
-                                    <div>
-                                        <h6>MARKET SIZE</h6><br>
+                                    <div style="display: block;">
+                                        <h6 class="card-title">BORROWED</h6> <br>
                                     </div>
-                                
-                                    <div>
-                                        <h6>TOTAL BORROWED</h6><br>
-                                    </div>
-                                    <div >
-                                        <h6>DEPOSIT APY</h6> <br>
-                                    </div>
-                                    <div>
-                                        <h6>BORROW APY</h6>
-                                    </div>
+                                  
                                 </div>
-                            </a>
-                        -->
+                        </div>
                         <div class="list-group">
                             <a href="#" class="list-group-item list-group-item-action">
                                 <div class="marketsgroup">
