pool info padding

--- a/pools/index.html
+++ b/pools/index.html
@@ -2247,6 +2247,7 @@
             }
             .poolinfo{
                 margin-top: 30px;
+                padding: 30px;
             }
             .tokeninfo{
                 margin-top: 30px;
@@ -2318,9 +2319,38 @@
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <div class="card-group">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title"><b> Deposit</b></h5>
+                    <p class="card-text">DEPOSIT APY <br>
+                      <b> 131.7% </b> <br> <br>
+                        PAST 30D AVG.<br>
+                       <b>0</b> </p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Borrow</h5>
+                    BORROW APY <br>
+                   <b> 145.7% </b><br><br>
+                    PAST 30D AVG. / TOTAL <br>
+                    <b> 0 </b>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Reserve</h5>
+                    RESERVE FACTOR <br>
+                    <b> 10%</b><br><br>
+                    RESERVE SIZE<br>
+                    <b> $2,105  </b><br>
+                    4,705 USDT
+                  </div>
+                </div>
+              </div>
             </div>
-          </div>
+        </div>
     </section>
 
     <section class="tokeninfo">
