acct and tokken padding

--- a/pools/index.html
+++ b/pools/index.html
@@ -2251,9 +2251,11 @@
             }
             .tokeninfo{
                 margin-top: 30px;
+                padding: 30px;
             }
             .accountinfo{
                 margin-top: 30px;
+                padding: 30px;
             }
         </style>
         
