--- a/pools/index.html
+++ b/pools/index.html
@@ -2340,13 +2340,13 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">TOTAL DEPOSITED <br>
+              <p class="card-text"> <b style="color:rgb(12, 95, 12);"> TOTAL DEPOSITED</b> <br>
                     124,551 USD <br>
                     122,243 USDT <br><br>
-                    TOTAL BORROWED <br>
+                   <b> TOTAL BORROWED </b><br>
                     56,786 USD <br>
                     126,948 USDT <br><br>
-                    AVAILABLE LIQUIDITY <br>
+                   <b>AVAILABLE LIQUIDITY </b> <br>
                     0 USD <br>
                     0 USDT
                 </p>
@@ -2355,7 +2355,7 @@
                   <div class="card-body">
                     <h5 class="card-title"><b> Deposit</b></h5>
                     <p class="card-text">DEPOSIT APY <br>
-                      <b> 131.7% </b> <br> <br>
+                      <b style="color:rgb(12, 95, 12);"> 131.7% </b> <br> <br>
                         PAST 30D AVG.<br>
                        <b>0</b> </p>
                   </div>
@@ -2364,7 +2364,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Borrow</h5>
                     BORROW APY <br>
-                   <b> 145.7% </b><br><br>
+                   <b style="color:rgb(12, 95, 12);"> 145.7% </b><br><br>
                     PAST 30D AVG. / TOTAL <br>
                     <b> 0 </b>
                   </div>
@@ -2373,9 +2373,9 @@
                   <div class="card-body">
                     <h5 class="card-title">Reserve</h5>
                     RESERVE FACTOR <br>
-                    <b> 10%</b><br><br>
+                    <b style="color:rgb(12, 95, 12);"> 10%</b><br><br>
                     RESERVE SIZE<br>
-                    <b> $2,105  </b><br>
+                    <b > $2,105  </b><br>
                     4,705 USDT
                   </div>
                 </div>
@@ -2394,35 +2394,39 @@
                 </div>
                 <div class="card-body">
                         <div class="marketsgroup">
-                            <h6 class="card-title">  <img src="../markets/usdticon.png" alt="" width="20px">USDT</h6>
+                            <h6 class="card-title">  <img src="../markets/usdticon.png" alt="" width="20px"> <b> USDT</b></h6>
                             <div style="display: block;">
                                 <small class="text-muted"> Address</small> <br>
                                 <small class="text-muted">OX35...75E</small>
                             </div>
-                            <a href="#" class="btn btn-primary">Explorer</a>
+                            <button text="0x7c731AB97e4dea173aAFFBa64c9C9Dc21e2F1b77" class="copy btn btn-size--sm btn-bg--primary rounded--full btn-hover--splash btn-hover--3d"><span class="btn__text">Copy Address</span></button>
                         </div>
                 </div>
               </div>
             </div>
+
             <div class="col-sm-6">
                 <div class="card">
-                  <div class="card-header">
-                     Token Info
-                  </div>
-                  <div class="card-body">
-                          <div class="marketsgroup">
-                              <h6 class="card-title">  <img src="../markets/usdticon.png" alt="" width="20px">USDT</h6>
+                    <div class="card-header">
+                        Price Info
+                    </div>
+                    <div class="card-body">
+                            <div class="marketsgroup">
+                              <h6 class="card-title">  <img src="../markets/usdticon.png" alt="" width="20px"><b> USDT</b></h6>
                               <div style="display: block;">
                                   <small class="text-muted"> Price</small> <br>
                                   <small class="text-muted">PRICE
-                                    $0.4473 (+55.4%)</small>
-                              </div>
-                          </div>
-                  </div>
+                                    $0.4473 <b style="color:rgb(12, 95, 12);">(+55.4%)</b> </small>
+                                </div>
+                                <a href="#" class="btn btn-primary">Explorer</a>
+                            </div>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
     </section>
+
+    
 
     <section class="accountinfo">
         <div class="row row-cols-1 row-cols-md-3 g-4">
