--- a/pools/index.html
+++ b/pools/index.html
@@ -2442,7 +2442,7 @@
                    DEPOSITS
                   </div>
                   <p class="card-text">Make you first deposit and earn more with market</p>
-                  <img src="../unitycore.png" class="card-img-top" alt="..." width="10%">
+                  <img src="../assets/blockchain.gif" class="card-img-top" alt="..." width="10%">
                 </div>
               </div>
             </div>
@@ -2454,7 +2454,7 @@
                   BORROWS
                   </div>
                   <p class="card-text">Improve your wallet health factor and Take your first borrow</p>
-                  <img src="../unitycore.png" class="card-img-top" alt="..." width="10%">
+                  <img src="../assets/blockchain.gif" class="card-img-top" alt="..." width="10%">
                 </div>
               </div>
             </div>
@@ -2466,7 +2466,7 @@
                    TOTAL APY
                     </div>
                     <p class="card-text">Deposit and borrow total APY</p>
-                    <img src="../unitycore.png" class="card-img-top" alt="..." width="10%">
+                    <img src="../assets/blockchain.gif" class="card-img-top" alt="..." width="10%">
                   </div>
                 </div>
               </div>
