--- a/pools/core.html
+++ b/pools/core.html
@@ -2270,7 +2270,7 @@
 <body>
     <nav class="navbar" style="background :linear-gradient(248.86deg, #6717ce 10.51%, #296ffa 93.41%);">
         <div class="container-fluid">
-            <img src="./unitycore.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            <img src="../unitycore.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>    
@@ -2394,7 +2394,7 @@
                 </div>
                 <div class="card-body">
                         <div class="marketsgroup">
-                            <h6 class="card-title">  <img src="./coredao.png" alt="" width="20px"> <b> CORE</b></h6>
+                            <h6 class="card-title">  <img src="../coredao.png" alt="" width="20px"> <b> CORE</b></h6>
                             <div style="display: block;">
                                 <small class="text-muted"> Address</small> <br>
                                 <small class="text-muted">OX35...75E</small>
@@ -2412,7 +2412,7 @@
                     </div>
                     <div class="card-body">
                             <div class="marketsgroup">
-                              <h6 class="card-title">  <img src="./coredao.png" alt="" width="20px"><b>CORE</b></h6>
+                              <h6 class="card-title">  <img src="../coredao.png" alt="" width="20px"><b>CORE</b></h6>
                               <div style="display: block;">
                                   <small class="text-muted"> Price</small> <br>
                                   <small class="text-muted">PRICE
