pools (usdt. ice. core. unity)

--- a/pools/usdt.html
+++ b/pools/usdt.html
@@ -2492,7 +2492,7 @@
 (function(){
     $("#pie-chart--v1").drawDoughnutChart([{
             value: 40,
-            color: "#3260ED"
+            color: "#27a17c"
         },
     ]);
 
