--- a/markets/index.html
+++ b/markets/index.html
@@ -2446,7 +2446,7 @@
                                 </div>
                             </a>
                           
-                            <a href="../pools/usdt.html" class="list-group-item list-group-item-action">
+                            <a href="../pools/core.html" class="list-group-item list-group-item-action">
                                 <div class="marketsgroup">
                                     <h6 class="card-title">  <img src="../coredao.png" alt="" width="20px">CORE</h6>
                                     <div style="display: block;">
